--- a/.github/workflows/semconv-validation.yml
+++ b/.github/workflows/semconv-validation.yml
@@ -15,15 +15,15 @@ jobs:
 
     - name: Check script versions
       shell: pwsh
-      run: .\build\scripts\check-semconv-versions.ps1
+      run: ./build/scripts/check-semconv-versions.ps1
 
     - name: Generate semantic conventions
       working-directory: src\OpenTelemetry.SemanticConventions
       shell: pwsh
       run: |
-        .\scripts\generate.ps1
+        ./src/OpenTelemetry.SemanticConventions/scripts/generate.ps1
 
     - name: Verify no changes
-      working-directory: src\OpenTelemetry.SemanticConventions
+      working-directory: ./src/OpenTelemetry.SemanticConventions
       run: |
         git diff --exit-code '.' || (echo 'Manual changes to Semantic Convention attributes are not allowed. Please re-generate the files and commit.' && exit 1)
