--- a/.github/ISSUE_TEMPLATE/release_request.yml
+++ b/.github/ISSUE_TEMPLATE/release_request.yml
@@ -1,4 +1,5 @@
 name: Release request
+title: "[release request] "
 description: Request a release for a component
 labels: ["release"]
 body:
@@ -28,6 +29,7 @@ body:
         - OpenTelemetry.Instrumentation.AWS
         - OpenTelemetry.Instrumentation.AWSLambda
         - OpenTelemetry.Instrumentation.Cassandra
+        - OpenTelemetry.Instrumentation.ConfluentKafka
         - OpenTelemetry.Instrumentation.ElasticsearchClient
         - OpenTelemetry.Instrumentation.EntityFrameworkCore
         - OpenTelemetry.Instrumentation.EventCounters
@@ -51,6 +53,7 @@ body:
         - OpenTelemetry.Resources.Container
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Host
+        - OpenTelemetry.Resources.OperatingSystem
         - OpenTelemetry.Resources.Process
         - OpenTelemetry.Resources.ProcessRuntime
         - OpenTelemetry.Sampler.AWS
