--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -55,6 +55,14 @@ on:
         type: string
         description: 'Release version'
         required: true
+      releaseIssue:
+        type: string
+        description: 'Release issue'
+        required: false
+      requestedByUserName:
+        type: string
+        description: 'Requesting user name'
+        required: false
 
   pull_request:
     types:
@@ -98,7 +106,8 @@ jobs:
           -gitRepository '${{ github.repository }}' `
           -component '${{ inputs.component }}' `
           -version '${{ inputs.version }}' `
-          -requestedByUserName '${{ github.event.sender.login }}' `
+          -requestedByUserName '${{ inputs.requestedByUserName || github.event.sender.login }}' `
+          -releaseIssue '${{ inputs.releaseIssue }}' `
           -targetBranch '${{ github.ref_name }}' `
           -gitUserName '${{ needs.automation.outputs.username }}' `
           -gitUserEmail '${{ needs.automation.outputs.email }}'
@@ -214,15 +223,23 @@ jobs:
           -gitUserName '${{ needs.automation.outputs.username }}' `
           -gitUserEmail '${{ needs.automation.outputs.email }}'
 
-  process-opened-release-request-issue:
+  process-release-request-issue:
     runs-on: ubuntu-latest
 
     needs: automation
 
     if: |
-      github.event_name == 'issues'
+      startsWith(github.event.issue.title, '[release request] ')
       && github.event.issue.pull_request == null
       && needs.automation.outputs.enabled
+      && (
+          (github.event_name == 'issues')
+        ||
+          (github.event_name == 'issue_comment'
+          && github.event.issue.state == 'open'
+          && contains(github.event.comment.body, '/PrepareRelease')
+          && github.event.comment.user.login != needs.automation.outputs.username)
+      )
 
     env:
       GH_TOKEN: ${{ secrets[needs.automation.outputs.token-secret-name] }}
@@ -233,15 +250,17 @@ jobs:
       with:
         token: ${{ secrets[needs.automation.outputs.token-secret-name] }}
 
-    - name: Tag code owners on release request issue
+    - name: Process release request issue being opened or commented
       shell: pwsh
       run: |
         Import-Module .\build\scripts\prepare-release.psm1
 
-        TagCodeOwnersOnRequestReleaseIssue `
+        TagCodeOwnersOnOrRunWorkflowForRequestReleaseIssue `
           -gitRepository '${{ github.repository }}' `
-          -requestedByUserName '${{ github.event.sender.login }}' `
+          -triggeringEventName '${{ github.event_name }}' `
+          -requestedByUserName '${{ github.event.comment.user.login || github.event.sender.login }}' `
           -issueNumber ${{ github.event.issue.number }} `
           -issueBody $env:ISSUE_BODY
       env:
         ISSUE_BODY: ${{ github.event.issue.body }}
+
