--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -6,6 +6,10 @@ on:
       project-name:
         required: true
         type: string
+      run-tests:
+        required: false
+        default: true
+        type: boolean
       code-cov-name:
         required: true
         type: string
@@ -87,6 +91,7 @@ jobs:
       run: dotnet build ${{ steps.resolve-project.outputs.project }} --configuration Release --no-restore
 
     - name: dotnet test ${{ steps.resolve-project.outputs.title }}
+      if: ${{ inputs.run-tests }}
       run: dotnet test ${{ steps.resolve-project.outputs.project }} --collect:"Code Coverage" --results-directory:TestResults --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
 
     - name: dotnet pack ${{ steps.resolve-project.outputs.title }}
@@ -94,14 +99,15 @@ jobs:
       run: dotnet pack ${{ steps.resolve-project.outputs.project }} --configuration Release --no-restore --no-build -p:EnablePackageValidation=true
 
     - name: Install coverage tool
+      if: ${{ inputs.run-tests }}
       run: dotnet tool install -g dotnet-coverage
 
     - name: Merging test results
-      if: ${{ hashFiles('./TestResults/**/*.coverage') != '' }}
+      if: ${{ inputs.run-tests && hashFiles('./TestResults/**/*.coverage') != '' }}
       run: dotnet-coverage merge -f cobertura -o ./TestResults/Cobertura.xml ./TestResults/**/*.coverage
 
     - name: Upload code coverage ${{ inputs.code-cov-prefix }}-${{ inputs.code-cov-name }}
-      if: ${{ hashFiles('./TestResults/Cobertura.xml') != '' }}
+      if: ${{ inputs.run-tests && hashFiles('./TestResults/Cobertura.xml') != '' }}
       uses: codecov/codecov-action@v4
       continue-on-error: true # Note: Don't fail for upload failures
       env:
