--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -25,6 +25,17 @@ on:
         default: '[ "net462", "net8.0" ]'
         required: false
         type: string
+      test-case-filter:
+        required: false
+        type: string
+      test-require-elevated:
+        default: false
+        required: false
+        type: boolean
+      pack:
+        default: true
+        required: false
+        type: boolean
 
 jobs:
   build-test:
@@ -92,10 +103,22 @@ jobs:
 
     - name: dotnet test ${{ steps.resolve-project.outputs.title }}
       if: ${{ inputs.run-tests }}
-      run: dotnet test ${{ steps.resolve-project.outputs.project }} --collect:"Code Coverage" --results-directory:TestResults --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
+      run: >
+        ${{ inputs.test-require-elevated && matrix.os != 'windows-latest' && 'sudo -E' || '' }}
+        dotnet test ${{ steps.resolve-project.outputs.project }}
+        --collect:"Code Coverage"
+        --results-directory:TestResults
+        --framework ${{ matrix.version }}
+        --configuration Release
+        --no-restore
+        --no-build
+        --logger:"console;verbosity=detailed"
+        --filter "${{ inputs.test-case-filter }}"
+        -- RunConfiguration.DisableAppDomain=true
+        ${{ inputs.test-require-elevated && matrix.os != 'windows-latest' && '&& sudo chmod a+rw ./TestResults' || '' }}
 
     - name: dotnet pack ${{ steps.resolve-project.outputs.title }}
-      if: ${{ matrix.os == 'windows-latest' }}
+      if: ${{ matrix.os == 'windows-latest' && inputs.pack }}
       run: dotnet pack ${{ steps.resolve-project.outputs.project }} --configuration Release --no-restore --no-build -p:EnablePackageValidation=true
 
     - name: Install coverage tool
@@ -113,10 +136,11 @@ jobs:
       env:
         OS: ${{ matrix.os }}
         TFM: ${{ matrix.version }}
+        FILTER: ${{ inputs.test-case-filter }}
         token: ${{ secrets.CODECOV_TOKEN }}
       with:
         file: TestResults/Cobertura.xml
-        env_vars: OS,TFM
+        env_vars: OS,TFM,FILTER
         flags: ${{ inputs.code-cov-prefix }}-${{ inputs.code-cov-name }}
         name: Code Coverage for ${{ inputs.code-cov-prefix }}-${{ inputs.code-cov-name }} on [${{ matrix.os }}.${{ matrix.version }}]
         codecov_yml_path: .github/codecov.yml
